--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -m64 ")
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
-set(SOURCE_FILES main.cpp MathFunctions.cpp MathFunctions.h)
+set(SOURCE_FILES main.cpp NumericalPeriodSpline.cpp NumericalPeriodSpline.h Exceptions.h Utilities.cpp Utilities.h)
 
 
 set(Boost_INCLUDE_DIR /usr/local/boost)
